change wording on letting yeast stand

--- a/_posts/2020-08-29-pizza.md
+++ b/_posts/2020-08-29-pizza.md
@@ -19,9 +19,9 @@ toc: true
 
 # Steps
 
-1. Mix water, sugar, and yeast. Let stand
+1. Mix water, sugar, and yeast. Let stand 5 minutes
 1. In a separate bowl mix flour and salt
-1. After 5 minutes add yeast mixture to flour mixture
+1. After the 5 minutes is up, add yeast mixture to flour mixture
 1. Add oil to the mixture
 1. Mix and rollout dough
 1. Preheat oven to 400&deg; F
